--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nes.css": "^2.3.0",
     "next": "13.1.1",
     "next-auth": "^4.18.7",
+    "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
