--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "firebase": "^9.15.0",
     "nes.css": "^2.3.0",
     "next": "13.1.1",
     "next-auth": "^4.18.7",
