--- a/package.json
+++ b/package.json
@@ -15,21 +15,21 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
-    "firebase": "^9.15.0",
-    "nes.css": "^2.3.0",
+    "firebase": "9.15.0",
+    "nes.css": "2.3.0",
     "next": "13.1.1",
-    "next-auth": "^4.18.7",
-    "openai": "^3.1.0",
+    "next-auth": "4.18.7",
+    "openai": "3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.1"
+    "@typescript-eslint/eslint-plugin": "5.48.0",
+    "@typescript-eslint/parser": "5.48.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-import-resolver-typescript": "3.5.2",
+    "eslint-plugin-prettier": "4.2.1",
+    "prettier": "2.8.1"
   }
 }
