--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "openai": "3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-share": "4.4.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
